# DataRequest

./: README.md  data_request.py  data_request_http.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
data_request/: __init__.py  data_request.py  data_request_http.py  http.py
data_request/tests/: test_http.py
