[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "data_request"
version = "1.0.10"
description = "A simple wrapper to make HTTP Requests"
authors = [
    { name = "Panda", email = "panda@delmasweb.net" }
]
dependencies = [
    "requests"
]
requires-python = ">=3.12"
keywords = ["http", "request", "api"]
urls = { Homepage = "https://github.com/Pier4413/DataRequest" }

[tool.setuptools.packages.find]
where = ["."]